Fixed text transform issue on mobile

--- a/src/styles/foundation/_container.scss
+++ b/src/styles/foundation/_container.scss
@@ -1,5 +1,12 @@
 @import '../foundation/sizing';
 
+html, body {
+  text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  -ms-text-size-adjust: none;
+}
+
 body {
   background-color: $background;
   margin: 0;
